# backend/modules/orkestra-app/src/main/java/com/orkestra/app/web/GlobalExceptionHandler.java
@@ -3,7 +3,10 @@ package com.orkestra.app.web;
 import com.orkestra.api.model.ApiError;
 import com.orkestra.exception.FileProcessingException;
 import com.orkestra.exception.UnsupportedMediaTypeException;
+import com.orkestra.exception.WorkflowNotFoundException;
 import com.orkestra.exception.WorkflowValidationException;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.MissingServletRequestParameterException;
@@ -12,16 +15,25 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 import org.springframework.web.multipart.MaxUploadSizeExceededException;
 import org.springframework.web.multipart.support.MissingServletRequestPartException;
 
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
+
 @RestControllerAdvice
 public class GlobalExceptionHandler {
+
+    private static final Logger log = LoggerFactory.getLogger(GlobalExceptionHandler.class);
 
     @ExceptionHandler(WorkflowValidationException.class)
     public ResponseEntity<ApiError> handleWorkflowValidation(
             WorkflowValidationException ex) {
+        log.error("Workflow validation failed", ex);
+
+        List<String> message = ex.getMessage() == null ? List.of("Unexpected error occurred") : Arrays.stream(ex.getMessage().split("\n")).toList();
 
         ApiError error = new ApiError()
                 .code(ex.getCode())
-                .message(ex.getMessage());
+                .messages(message);
 
         return ResponseEntity
                 .status(HttpStatus.BAD_REQUEST)
@@ -31,10 +43,13 @@ public class GlobalExceptionHandler {
     @ExceptionHandler(FileProcessingException.class)
     public ResponseEntity<ApiError> handleFileProcessingException(
             FileProcessingException ex) {
+        log.error("File processing failed", ex);
+
+        List<String> message = ex.getMessage() == null ? List.of("Unexpected error occurred") : Arrays.stream(ex.getMessage().split("\n")).toList();
 
         ApiError error = new ApiError()
                 .code(ex.getCode())
-                .message(ex.getMessage());
+                .messages(message);
 
         return ResponseEntity
                 .status(HttpStatus.BAD_REQUEST)
@@ -44,10 +59,13 @@ public class GlobalExceptionHandler {
     @ExceptionHandler(UnsupportedMediaTypeException.class)
     public ResponseEntity<ApiError> handleUnsupportedMediaType(
             UnsupportedMediaTypeException ex) {
+        log.error("Unsupported media type", ex);
+
+        List<String> message = ex.getMessage() == null ? List.of("Unexpected error occurred") : Arrays.stream(ex.getMessage().split("\n")).toList();
 
         ApiError error = new ApiError()
                 .code("UNSUPPORTED_MEDIA_TYPE")
-                .message(ex.getMessage());
+                .messages(message);
 
         return ResponseEntity
                 .status(HttpStatus.UNSUPPORTED_MEDIA_TYPE)
@@ -57,10 +75,13 @@ public class GlobalExceptionHandler {
     @ExceptionHandler(MissingServletRequestParameterException.class)
     public ResponseEntity<ApiError> handleMissingServletRequestParameterException(
             MissingServletRequestParameterException ex) {
+        log.error("Missing request parameter", ex);
+
+        List<String> message = ex.getMessage() == null ? List.of("Unexpected error occurred") : Arrays.stream(ex.getMessage().split("\n")).toList();
 
         ApiError error = new ApiError()
                 .code("MISSING_PARAMETER")
-                .message(ex.getMessage());
+                .messages(message);
 
         return ResponseEntity
                 .status(HttpStatus.BAD_REQUEST)
@@ -70,10 +91,13 @@ public class GlobalExceptionHandler {
     @ExceptionHandler(MissingServletRequestPartException.class)
     public ResponseEntity<ApiError> handleMissingServletRequestPartException(
     MissingServletRequestPartException ex) {
+        log.error("Missing request part", ex);
+
+        List<String> message = ex.getMessage() == null ? List.of("Unexpected error occurred") : Arrays.stream(ex.getMessage().split("\n")).toList();
 
         ApiError error = new ApiError()
                 .code("MISSING_PARAMETER")
-                .message(ex.getMessage());
+                .messages(message);
 
         return ResponseEntity
                 .status(HttpStatus.BAD_REQUEST)
@@ -84,10 +108,13 @@ public class GlobalExceptionHandler {
     @ExceptionHandler(MaxUploadSizeExceededException.class)
     public ResponseEntity<ApiError> handleMaxUploadSizeExceededException(
             MaxUploadSizeExceededException ex) {
+        log.error("Workflow file too large", ex);
 
+        List<String> messages = new ArrayList<>();
+        messages.add("Workflow file exceeds maximum allowed size");
         ApiError error = new ApiError()
                 .code("WORKFLOW_FILE_TOO_LARGE")
-                .message("Workflow file exceeds maximum allowed size");
+                .messages(messages);
 
         return ResponseEntity
                 .status(HttpStatus.PAYLOAD_TOO_LARGE)
@@ -96,12 +123,32 @@ public class GlobalExceptionHandler {
 
     @ExceptionHandler(Throwable.class)
     public ResponseEntity<ApiError> handleThrowable(Throwable ex) {
+        log.error("Unexpected error occurred", ex);
+
+        List<String> message = ex.getMessage() == null ? List.of("Unexpected error occurred") : Arrays.stream(ex.getMessage().split("\n")).toList();
+
         ApiError error = new ApiError()
                 .code("INTERNAL_ERROR")
-                .message(ex.getMessage());
+                .messages(message);
 
         return ResponseEntity
                 .status(HttpStatus.INTERNAL_SERVER_ERROR)
                 .body(error);
+    }
+
+    @ExceptionHandler(WorkflowNotFoundException.class)
+    public ResponseEntity<ApiError> handleWorkflowNotFoundException(WorkflowNotFoundException ex) {
+        log.error("Unexpected error occurred", ex);
+
+        List<String> message = ex.getMessage() == null ? List.of("Unexpected error occurred") : Arrays.stream(ex.getMessage().split("\n")).toList();
+
+        ApiError error = new ApiError()
+                .code(ex.getCode())
+                .messages(message);
+
+        return ResponseEntity
+                .status(HttpStatus.NOT_FOUND)
+                .body(error);
+
     }
 }
